src/test/deca/syntax/valid/decla_fields_meme_ligne.deca
// Description:
//    on déclare des champs au sein d'une classe (sur une même ligne)
//
// Resultats:
//   ok

class A {
	int a, b, c;
	protected float d, e, f;
	boolean g, h, i;
}