src/test/deca/syntax/invalid/list_class_mauvais.deca
// Description:
//    on déclare mal une liste de classes
//
// Resultats:
//   

class A {
}
class B {
}
int e;